--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -41,6 +41,14 @@ $H_A$: The average number of pushups done by line players is statistically diffe
 
 <!--Graphical results here. Make sure to show your code. Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too. Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+### Plot boxplots
+
+```{r}
+boxplot(pushups~position,data=mydata)
+```
+
+Skilled players who are smaller do more push ups than line players who are bigger. The box plot for the line is lower than the skill box. The top line of the line box is lower than bottom line of skill box which means there's an obvious push up count difference. 
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
