--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -53,6 +53,14 @@ Skilled players who are smaller do more push ups than line players who are bigge
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+# Numerical results
+
+```{r}
+favstats(pushups~position,data=mydata)
+```
+
+From the numerical results we can see that the skilled players do about 3 times more push ups than the line players. Q3 of the line players is smaller than the Q1 of skilled players.
+
 ## Inferential Results
 
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
