--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -65,6 +65,12 @@ From the numerical results we can see that the skilled players do about 3 times 
 
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+t.test(pushups~position,data=mydata)
+```
+
+The probability of getting a result like this is 0.000009421 if there is no difference between line players and skill doing push ups. In my opinion the line players are no where nearly skilled in doing push ups as the killed players. I reject the hypothesis in this case beacsue there is a huge differnce in the amount of push ups the skill players did compared to the line players.
+
 
 # Discussion and Conclusion
 
